...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="1"
                android:textColor="@color/pad_text_color" />

            <Button
                android:id="@+id/button2"
                android:layout_margin="@dimen/pad_button_margin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="2"
                android:textColor="@color/pad_text_color" />
...
